# cyberimmune-systems-autonomous-delivery-drone-with-kos

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.kos.md  README.md  README.orvd.md  afcs.Dockerfile  afcs.conf.docker  cross-build-sim.sh  cross-build.sh  docker-compose-offline-multi.yml  docker-compose-offline-obstacles.yml  docker-compose-offline.yml  docker-compose-online-multi.yml  docker-compose-online-obstacles.yml  docker-compose-online.yml  docker-compose.yml  install_dependencies.sh  mission-upload-to-orvd.sh  mqtt-server.Dockerfile  orvd.Dockerfile  orvd.conf.docker  run.sh  run_tests.sh
docs/: API.md  (+13 more)
kos/: CMakeLists.txt  README.md  cross-build-real-offline.sh  cross-build-real-online.sh  cross-build-sim-no-server.sh  cross-build-sim-offline.sh  cross-build-sim-online.sh  cross-build-sim.sh  cross-build-unit-tests.sh  cross-build.sh
kos/autopilot_connector/: CMakeLists.txt
kos/autopilot_connector/include/: autopilot_connector.h  autopilot_connector_interface.h
kos/autopilot_connector/src/: autopilot_connector.cpp  autopilot_connector_interface.cpp  autopilot_connector_real.cpp  autopilot_connector_simulator.cpp  main.cpp
kos/credential_manager/: CMakeLists.txt
kos/credential_manager/include/: credential_manager.h  credential_manager_interface.h
kos/credential_manager/src/: credential_manager.cpp  credential_manager_interface.cpp  credential_manager_offline.cpp  credential_manager_online.cpp  credential_manager_shared.cpp  main.cpp
kos/einit/: CMakeLists.txt  init.yaml.in
kos/einit/drone_controller/: CMakeLists.txt
kos/einit/drone_controller/src/: drone_controller.psl  pal_tests.psl.in  real_offline.psl.in  real_offline.yaml.in  real_online.psl.in  real_online.yaml.in  sim_offline.psl.in  sim_offline.yaml.in  sim_online.psl.in  sim_online.yaml.in
kos/einit/pal_tests/: CMakeLists.txt
kos/einit/real_offline/: CMakeLists.txt
kos/einit/real_offline/src/: init.yaml.in  security.psl.in
kos/einit/real_online/: CMakeLists.txt
kos/einit/real_online/src/: init.yaml.in  security.psl.in
kos/einit/real_server/: CMakeLists.txt
kos/einit/real_server/src/: init.yaml.in  security.psl.in
kos/einit/simulator_offline/: CMakeLists.txt
kos/einit/simulator_online/: CMakeLists.txt
kos/einit/unit_tests/: CMakeLists.txt  init.yaml.in
kos/flight_controller/: CMakeLists.txt
kos/flight_controller/include/: flight_controller.h  flight_controller_interface.h  mission.h
kos/flight_controller/src/: flight_controller.cpp  flight_controller_interface.cpp  main.cpp  mission.cpp
kos/ipc_messages/include/: initialization_interface.h  transport_interface.h
kos/ipc_messages/src/: initialization_interface.cpp  transport_interface.cpp
kos/klog/src/: klog_entity.c
kos/klog_storage/: CMakeLists.txt
kos/klog_storage/src/: klog_storage_entity.cpp
kos/logger/: CMakeLists.txt
kos/logger/include/: logger.h  logger_interface.h
kos/logger/src/: logger.cpp  logger_interface.cpp  main.cpp
kos/navigation_system/: CMakeLists.txt
kos/navigation_system/include/: compass_qmc5883.h  mpu_6050.h  navigation_system.h  navigation_system_interface.h  sim_sensor_data_message.h
kos/navigation_system/src/: compass_qmc5883.cpp  main.cpp  mpu_6050.cpp  navigation_system.cpp  navigation_system_interface.cpp  navigation_system_real.cpp  navigation_system_shared.cpp  navigation_system_simulator.cpp
kos/periphery_controller/: CMakeLists.txt
kos/periphery_controller/include/: gpio.h  periphery_controller.h  periphery_controller_interface.h  sim_periphery_message.h
kos/periphery_controller/src/: gpio.cpp  main.cpp  periphery_controller.cpp  periphery_controller_interface.cpp  periphery_controller_real.cpp  periphery_controller_shared.cpp  periphery_controller_simulator.cpp
kos/resources/: AutopilotConnector.edl  AutopilotConnectorInterface.idl  CredentialManager.edl  CredentialManagerInterface.idl  FlightController.edl  Initialization.idl  KlogEntity.edl  KlogStorageEntity.edl  Logger.edl  LoggerInterface.idl  NavigationSystem.edl  NavigationSystemInterface.idl  PeripheryController.edl  PeripheryControllerInterface.idl  ServerConnector.edl  ServerConnectorInterface.idl  Test.edl  UnitTests.edl
kos/server_connector/: CMakeLists.txt
kos/server_connector/include/: server_connector.h  server_connector_interface.h
kos/server_connector/src/: main.cpp  server_connector.cpp  server_connector_interface.cpp  server_connector_offline.cpp  server_connector_online.cpp
kos/shared/include/: autopilot_command.h  initialization_interface.h  ipc_messages_autopilot_connector.h  ipc_messages_credential_manager.h  ipc_messages_initialization.h  ipc_messages_logger.h  ipc_messages_navigation_system.h  ipc_messages_periphery_controller.h  ipc_messages_server_connector.h  light_mode.h
kos/shared/src/: initialization_interface.cpp  ipc_messages_autopilot_connector.cpp  ipc_messages_credential_manager.cpp  ipc_messages_initialization.cpp  ipc_messages_logger.cpp  ipc_messages_navigation_system.cpp  ipc_messages_periphery_controller.cpp  ipc_messages_server_connector.cpp
kos/test/: CMakeLists.txt
kos/test/sdk/: sdk_authenticity.cpp  sdk_authenticity.h  sdk_autopilot_communication.cpp  sdk_autopilot_communication.h  sdk_compass_qmc5883.h  sdk_firmware.cpp  sdk_firmware.h  sdk_gpio.cpp  sdk_kill_switch.cpp  sdk_light.cpp  sdk_mission.cpp  sdk_mission.h  sdk_mpu_6050.cpp  sdk_net.cpp  sdk_net.h
kos/test/src/: main.cpp
kos/unit_tests/: CMakeLists.txt
kos/unit_tests/include/: mock.h  mock_declaration.h
kos/unit_tests/src/: mock.cpp  mock_definition.cpp  unit_tests.cpp
test/: CMakeLists.txt
test/sdk/: sdk_authenticity.cpp  sdk_autopilot_communication.cpp  sdk_autopilot_communication.h  sdk_compass.cpp  sdk_compass.h  sdk_compass_qmc5883.cpp  sdk_compass_qmc5883.h  sdk_firmware.cpp  sdk_gpio.cpp  sdk_gpio.h  sdk_kill_switch.h  sdk_light.cpp  sdk_light.h  sdk_mission.cpp  sdk_mpu.cpp  sdk_mpu.h  sdk_mpu_6050.cpp  sdk_mpu_6050.h  sdk_net.cpp  sdk_net.h  sdk_sim_sensors.cpp  sdk_sim_sensors.h  sdk_uart.cpp  sdk_uart.h
test/src/: main.cpp
(+1433 files in other folders)
